fix date align

--- a/site/style.css
+++ b/site/style.css
@@ -2,8 +2,11 @@
 /* TODOs
  - headers with auto anchors
  - Add more personality, uniqueness
- - make images nice
  - add nice fonts
+ - multiresolution favicon
+ - update about me
+ - update posts
+ - make dates align
 */
 /*Import Lato*/
 @import url('fonts/lato.css');
